added product and category entity

--- a/src/main/resources/templates/product-details.html
+++ b/src/main/resources/templates/product-details.html
@@ -149,6 +149,11 @@
                                             <img class="d-block w-100" src="img/product-img/pro-big-4.jpg" alt="Fourth slide">
                                         </a>
                                     </div>
+                                    <div class="carousel-item">
+                                        <a class="gallery_img" href="img/product-img/pro-big-4.jpg">
+                                            <img class="d-block w-100" src="img/product-img/pro-big-1.jpg" alt="Fourth slide">
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
