--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -216,7 +216,7 @@
                     <!-- Single Product Area -->
                     <div class="col-12 col-sm-6 col-md-12 col-xl-6">
                         <div class="single-product-wrapper">
-                            <!-- Product Image -->
+                            <!-- Product ProductImage -->
                             <div class="product-img">
                                 <img src="img/product-img/kashpo.jpg" alt="">
                                 <!-- Hover Thumb -->
@@ -253,7 +253,7 @@
                     <!-- Single Product Area -->
                     <div class="col-12 col-sm-6 col-md-12 col-xl-6">
                         <div class="single-product-wrapper">
-                            <!-- Product Image -->
+                            <!-- Product ProductImage -->
                             <div class="product-img">
                                 <img src="img/product-img/product2.jpg" alt="">
                                 <!-- Hover Thumb -->
@@ -290,7 +290,7 @@
                     <!-- Single Product Area -->
                     <div class="col-12 col-sm-6 col-md-12 col-xl-6">
                         <div class="single-product-wrapper">
-                            <!-- Product Image -->
+                            <!-- Product ProductImage -->
                             <div class="product-img">
                                 <img src="img/product-img/product3.jpg" alt="">
                                 <!-- Hover Thumb -->
@@ -327,7 +327,7 @@
                     <!-- Single Product Area -->
                     <div class="col-12 col-sm-6 col-md-12 col-xl-6">
                         <div class="single-product-wrapper">
-                            <!-- Product Image -->
+                            <!-- Product ProductImage -->
                             <div class="product-img">
                                 <img src="img/product-img/product4.jpg" alt="">
                                 <!-- Hover Thumb -->
@@ -364,7 +364,7 @@
                     <!-- Single Product Area -->
                     <div class="col-12 col-sm-6 col-md-12 col-xl-6">
                         <div class="single-product-wrapper">
-                            <!-- Product Image -->
+                            <!-- Product ProductImage -->
                             <div class="product-img">
                                 <img src="img/product-img/product5.jpg" alt="">
                                 <!-- Hover Thumb -->
@@ -401,7 +401,7 @@
                     <!-- Single Product Area -->
                     <div class="col-12 col-sm-6 col-md-12 col-xl-6">
                         <div class="single-product-wrapper">
-                            <!-- Product Image -->
+                            <!-- Product ProductImage -->
                             <div class="product-img">
                                 <img src="img/product-img/product6.jpg" alt="">
                                 <!-- Hover Thumb -->
