--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,23 +22,7 @@
 
 <body>
 <!-- Search Wrapper Area Start -->
-<div class="search-wrapper section-padding-100">
-    <div class="search-close">
-        <i class="fa fa-close" aria-hidden="true"></i>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <div class="search-content">
-                    <form action="#" method="get">
-                        <input type="search" name="search" id="search" placeholder="Введите текст...">
-                        <button type="submit"><img src="img/core-img/search.png" alt=""></button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+<div th:replace="fragments/header.html :: search"></div>
 <!-- Search Wrapper Area End -->
 
 <!-- ##### Main Content Wrapper Start ##### -->
