added categories to shop page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -51,7 +51,7 @@
             <div th:each="category : ${categories}">
                 <!-- Single Catagory -->
                 <div class="single-products-catagory clearfix">
-                    <a href="shop">
+                    <a th:href="@{shop(category = ${category.id})}">
                         <img th:src="@{'img/cat-img/' + ${category.image}}" alt="">
                         <!-- Hover Content -->
                         <div class="hover-content">
