refactor shop template

--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -63,58 +63,29 @@
         </div>
 
         <!-- ##### Single Widget ##### -->
-        <div class="widget brands mb-50">
-            <!-- Widget Title -->
-            <h6 class="widget-title mb-30">Бренды</h6>
-
-            <div class="widget-desc">
-                <!-- Single Form Check -->
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="amado">
-                    <label class="form-check-label" for="amado">Poponin's luxury</label>
-                </div>
-                <!-- Single Form Check -->
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="ikea">
-                    <label class="form-check-label" for="ikea">Ikea</label>
-                </div>
-            </div>
-        </div>
-
-        <!-- ##### Single Widget ##### -->
-        <div class="widget color mb-50">
-            <!-- Widget Title -->
-            <h6 class="widget-title mb-30">Цвет</h6>
-
-            <div class="widget-desc">
-                <ul class="d-flex">
-                    <li><a href="#" class="color1"></a></li>
-                    <li><a href="#" class="color2"></a></li>
-                    <li><a href="#" class="color3"></a></li>
-                    <li><a href="#" class="color4"></a></li>
-                    <li><a href="#" class="color5"></a></li>
-                    <li><a href="#" class="color6"></a></li>
-                    <li><a href="#" class="color7"></a></li>
-                    <li><a href="#" class="color8"></a></li>
-                </ul>
-            </div>
-        </div>
-
-        <!-- ##### Single Widget ##### -->
         <div class="widget price mb-50">
             <!-- Widget Title -->
-            <h6 class="widget-title mb-30">Price</h6>
+            <h6 class="widget-title mb-30">Цена</h6>
 
             <div class="widget-desc">
                 <div class="slider-range">
-                    <div data-min="10" data-max="1000" data-unit="$"
+                    <div data-min="10" data-max="1000" data-unit="₽"
                          class="slider-range-price ui-slider ui-slider-horizontal ui-widget ui-widget-content ui-corner-all"
                          data-value-min="10" data-value-max="1000" data-label-result="">
                         <div class="ui-slider-range ui-widget-header ui-corner-all"></div>
                         <span class="ui-slider-handle ui-state-default ui-corner-all" tabindex="0"></span>
                         <span class="ui-slider-handle ui-state-default ui-corner-all" tabindex="0"></span>
                     </div>
-                    <div class="range-price">$10 - $1000</div>
+                    <div class="range-price">₽10 - ₽1000</div>
+                </div>
+            </div>
+            <div class="widget brands mb-50 mt-30">
+                <div class="widget-desc">
+                    <!-- Single Form Check -->
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="stock">
+                        <label class="form-check-label" for="stock">в наличии</label>
+                    </div>
                 </div>
             </div>
         </div>
