--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -52,7 +52,7 @@
                 <!-- Single Catagory -->
                 <div class="single-products-catagory clearfix">
                     <a th:href="@{shop(category = ${category.id})}">
-                        <img th:src="@{'img/cat-img/' + ${category.image}}" alt="">
+                        <img th:src="@{'image/' + ${category.image}}" alt="">
                         <!-- Hover Content -->
                         <div class="hover-content">
                             <div class="line"></div>
