--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -5,6 +5,7 @@
     <title>Панель администратора</title>
 </head>
     <body>
-        <a th:text="${'Редактирование категорий'}" th:href="@{'/admin/category/all'}"></a>
+        <a th:text="${'Редактирование категорий'}" th:href="@{'/admin/category/all'}"></a><br/>
+        <a th:text="${'Редактирование картинок'}" th:href="@{'/admin/image/all'}"></a><br/>
     </body>
 </html>
