add category image editing

--- a/src/main/resources/templates/admin/categories.html
+++ b/src/main/resources/templates/admin/categories.html
@@ -20,7 +20,7 @@
         <td><span th:text="${category.id}"></span></td>
         <td><a th:href="@{'/admin/category/edit/' + ${category.id}}" th:text="${category.name}"></a></td>
         <td><span th:text="${category.description}"></span></td>
-        <td><img th:src="@{'/image/' + ${category.image}}" th:height="125" alt=""></td>
+        <td><img th:src="@{'/image/' + ${category.image}}" th:height="125" alt="Изображение не задано"/></td>
         <td><a th:text="Удалить" th:href="@{'/admin/category/delete/' + ${category.id}}"></a></td>
     </tr>
 </table>
