--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -12,11 +12,11 @@
     <title>Amado - Furniture Ecommerce Template | Checkout</title>
 
     <!-- Favicon  -->
-    <link rel="icon" href="img/core-img/favicon.ico">
+    <link rel="icon" href="static/img/core-img/favicon.ico">
 
     <!-- Core Style CSS -->
-    <link rel="stylesheet" href="css/core-style.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="static/css/core-style.css">
+    <link rel="stylesheet" href="static/css/style.css">
 
 </head>
 
@@ -32,7 +32,7 @@
         <div class="mobile-nav">
             <!-- Navbar Brand -->
             <div class="amado-navbar-brand">
-                <a href="index"><img src="img/core-img/logo.png" alt=""></a>
+                <a href="index"><img src="static/img/core-img/logo.png" alt=""></a>
             </div>
             <!-- Navbar Toggler -->
             <div class="amado-navbar-toggler">
