--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -11,7 +11,7 @@
     </div>
     <!-- Logo -->
     <div class="logo">
-        <a href="index"><img src="img/core-img/logo.png" alt=""></a>
+        <a href="index"><img src="static/img/core-img/logo.png" alt=""></a>
     </div>
     <!-- Amado Nav -->
     <nav class="amado-nav">
@@ -28,9 +28,9 @@
     </div>
     <!-- Cart Menu -->
     <div class="cart-fav-search mb-100">
-        <a href="cart" class="cart-nav"><img src="img/core-img/cart.png" alt=""> Корзина <span>(0)</span></a>
-        <a href="#" class="fav-nav"><img src="img/core-img/favorites.png" alt=""> Избранное</a>
-        <a href="#" class="search-nav"><img src="img/core-img/search.png" alt=""> Поиск</a>
+        <a href="cart" class="cart-nav"><img src="static/img/core-img/cart.png" alt=""> Корзина <span>(0)</span></a>
+        <a href="#" class="fav-nav"><img src="static/img/core-img/favorites.png" alt=""> Избранное</a>
+        <a href="#" class="search-nav"><img src="static/img/core-img/search.png" alt=""> Поиск</a>
     </div>
     <!-- Social Button -->
     <div class="social-info d-flex justify-content-between">
@@ -51,7 +51,7 @@
                 <div class="search-content">
                     <form action="#" method="get">
                         <input type="search" name="search" id="search" placeholder="Введите текст...">
-                        <button type="submit"><img src="img/core-img/search.png" alt=""></button>
+                        <button type="submit"><img src="static/img/core-img/search.png" alt=""></button>
                     </form>
                 </div>
             </div>
