add products list page

--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -6,6 +6,7 @@
 </head>
     <body>
         <a th:text="${'Редактирование категорий'}" th:href="@{'/admin/category/all'}"></a><br/>
+        <a th:text="${'Редактирование продуктов'}" th:href="@{'/admin/product/all'}"></a><br/>
         <a th:text="${'Редактирование картинок'}" th:href="@{'/admin/image/all'}"></a><br/>
     </body>
 </html>
